test/fixtures/public/fail/syntactical/MultipleSequential.jmm
class MultipleSequential {
	public static void main(String[] args) {
		while (i < ) {
		}
		while (j < ) {
				
		}
	}
}